# DesktopBox

./: .gitignore  AGENTS.md  AI开发守则.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  功能需求文档.md  架构设计文档.md  项目计划文档.md
.claude/: settings.json
.claude/agents/: dev.md  pm.md  qa.md
.claude/projects/d--program-desktopBox/memory/: MEMORY.md  development-process-v2.md
.claude/skills/multi-agent-dev-team/: SKILL.md
scripts/: cleanup.ps1
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: desktop_icons.rs  lib.rs  main.rs  taskbar.rs
src-tauri/src/commands/: desktop.rs  mod.rs  shell.rs  shortcut.rs  system.rs  window.rs
src-tauri/src/services/: file_poller.rs  icon_extractor.rs  mod.rs  shell_manager.rs  sys_service.rs  system_monitor.rs
src-tauri/src/types/: messages.rs
src/components/: DesktopView.ts  MonitorPanel.ts  SettingsPanel.ts  Sidebar.ts  Slider.ts
src/core/: DragEngine.ts  EventBus.ts  ModuleBase.ts  ModuleManager.ts  Persistence.ts  StateManager.ts
src/modules/DemoModule/: DemoModule.ts  index.ts  styles.css
src/modules/IconBox/: IconBox.ts  index.ts  styles.css
src/modules/MonitorPanel/: MetricCard.ts  MonitorPanel.ts  index.ts  styles.css
src/modules/ProcessTable/: ProcessFilter.ts  ProcessTable.ts  index.ts  styles.css
src/modules/Terminal/: CustomCommands.ts  TerminalView.ts  index.ts  styles.css
src/state/: appState.ts
src/utils/: constants.ts  helpers.ts  tauriApi.ts
