[package]
name = "desktop-box"
version = "0.1.0"
description = "Desktop icon management and system monitoring tool"
authors = ["MIEA04"]
edition = "2021"

[lib]
name = "desktop_box_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winuser"] }
