[package]
name = "desktop-box"
version = "0.1.0"
description = "Desktop icon management and system monitoring tool"
authors = ["MIEA04"]
edition = "2021"

[lib]
name = "desktop_box_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
winreg = "0.55"
